--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: objective-c
 osx_image: xcode10
 xcode_project: ApplepieDemo/ApplepieDemo.xcworkspace
 xcode_scheme: ApplepieDemo
-xcode_sdk: iOS Simulator,OS=12.0,name=iPhone XS Max
+xcode_sdk: iphoneos12.0
 podfile: ApplepieDemo/Podfile
