--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,5 @@ language: objective-c
 osx_image: xcode10
 xcode_project: ApplepieDemo/ApplepieDemo.xcodeproj
 xcode_scheme: ApplepieDemo
-xcode_sdk: iphoneos12.0
+xcode_sdk: iphonesimulator12.0
 podfile: ApplepieDemo/Podfile
