--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: objective-c
 osx_image: xcode10
-xcode_project: ApplepieDemo/ApplepieDemo.xcodeproj
+xcode_workspace: ApplepieDemo/ApplepieDemo.xcworkspace
 xcode_scheme: ApplepieDemo
 xcode_sdk: iphonesimulator12.0
 podfile: ApplepieDemo/Podfile
