--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,4 @@ osx_image: xcode10
 # xcode_sdk: iphonesimulator12.0
 podfile: ApplepieDemo/Podfile
 script:
-- |
-    set -o pipefail
-    xcodebuild clean test -workspace ApplepieDemo/ApplepieDemo.xcworkspace -scheme ApplepieDemo -sdk iphonesimulator12.0 -enableCodeCoverage YES | bundle exec xcpretty
+  - xcodebuild clean test -workspace ApplepieDemo/ApplepieDemo.xcworkspace -scheme ApplepieDemo -sdk iphonesimulator12.0 -enableCodeCoverage YES | bundle exec xcpretty
