--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,11 @@ osx_image: xcode10
 # xcode_scheme: ApplepieDemo
 # xcode_sdk: iphonesimulator12.0
 podfile: ApplepieDemo/Podfile
+
+-before_install:
+ - |
+    gem install xcpretty -N --no-ri --no-rdoc
 script:
-  - xcodebuild clean test -workspace ApplepieDemo/ApplepieDemo.xcworkspace -scheme ApplepieDemo -sdk iphonesimulator12.0 -enableCodeCoverage YES | bundle exec xcpretty
+- |
+    set -o pipefail
+    xcodebuild clean test -workspace ApplepieDemo/ApplepieDemo.xcworkspace -scheme ApplepieDemo -sdk iphonesimulator12.0 -enableCodeCoverage YES | bundle exec xcpretty
