--- a/ApplepieDemo/Podfile
+++ b/ApplepieDemo/Podfile
@@ -8,12 +8,16 @@ inhibit_all_warnings!
 use_frameworks!
 
 target 'Applepie' do
-    pod 'Alamofire', '~> 4.7.0'
-    pod 'CryptoSwift'
+    pod 'Alamofire', '~> 4.7.3'
+    pod 'ReactiveCocoa', '~> 8.0.2'
+    pod 'CryptoSwift', '~> 0.13.0'
+    pod 'Kingfisher', '~> 4.10.0'
+    pod 'CocoaLumberjack/Swift', '~> 3.4.2'
 end
 
 def pods
-    pod 'Alamofire', '~> 4.7.0'
+    pod 'ReactiveCocoa', '~> 8.0.2'
+    pod 'CocoaLumberjack/Swift', '~> 3.4.2'
 end
 
 target 'ApplepieDemo' do
