--- a/ApplepieDemo/Podfile
+++ b/ApplepieDemo/Podfile
@@ -12,15 +12,22 @@ target 'Applepie' do
     pod 'ReactiveCocoa', '~> 8.0.2'
     pod 'CryptoSwift', '~> 0.13.0'
     pod 'Kingfisher', '~> 4.10.0'
+    pod 'AsyncSwift', '~> 2.0.5'
     pod 'CocoaLumberjack/Swift', '~> 3.4.2'
 end
 
 def pods
+    pod 'Alamofire', '~> 4.7.3'
     pod 'ReactiveCocoa', '~> 8.0.2'
     pod 'CocoaLumberjack/Swift', '~> 3.4.2'
+    pod 'AsyncSwift', '~> 2.0.5'
 end
 
 target 'ApplepieDemo' do
+    pods
+end
+
+target 'ApplepieTests' do
     pods
 end
 
