--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,13 @@ osx_image: xcode10
 # xcode_sdk: iphonesimulator12.0
 podfile: ApplepieDemo/Podfile
 
+branches:
+  only:
+  - master
+
 -before_install:
  - |
+    pod repo update
     gem install xcpretty -N --no-ri --no-rdoc
 script:
 - |
