--- a/ApplepieDemo/Podfile
+++ b/ApplepieDemo/Podfile
@@ -38,7 +38,11 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     target.build_configurations.each do |config|
-      config.build_settings['SWIFT_VERSION'] = '4.2'
+      if target.name == 'ReactiveCocoa'
+        config.build_settings['SWIFT_VERSION'] = '4'
+        else
+        config.build_settings['SWIFT_VERSION'] = '4.2'
+      end
     end
   end
 end
