--- a/ApplepieDemo/Podfile
+++ b/ApplepieDemo/Podfile
@@ -11,6 +11,7 @@ target 'Applepie' do
     pod 'Alamofire', '~> 4.7.3'
     pod 'ReactiveCocoa', '~> 8.0.2'
     pod 'CryptoSwift', '~> 0.13.0'
+    pod 'PromiseKit', '~> 6.7.0'
     pod 'Kingfisher', '~> 4.10.0'
     pod 'AsyncSwift', '~> 2.0.4'
     pod 'CocoaLumberjack/Swift', '~> 3.4.2'
