--- a/ApplepieDemo/Podfile
+++ b/ApplepieDemo/Podfile
@@ -12,8 +12,9 @@ target 'Applepie' do
     pod 'ReactiveCocoa', '~> 8.0.2'
     pod 'CryptoSwift', '~> 0.13.0'
     pod 'PromiseKit', '~> 6.7.0'
-    pod 'Kingfisher', '~> 4.10.0'
-    pod 'AsyncSwift', '~> 2.0.4'
+    pod 'Kingfisher', '~> 4.10.1'
+    pod 'PINCache', '~> 3.0.1-beta.7'
+    pod 'SwiftyUserDefaults', '4.0.0-alpha.1'
     pod 'CocoaLumberjack/Swift', '~> 3.4.2'
 end
 
@@ -21,7 +22,6 @@ def pods
     pod 'Alamofire', '~> 4.7.3'
     pod 'ReactiveCocoa', '~> 8.0.2'
     pod 'CocoaLumberjack/Swift', '~> 3.4.2'
-    pod 'AsyncSwift', '~> 2.0.4'
 end
 
 target 'ApplepieDemo' do
