--- a/ApplepieDemo/ApplepieDemo/Info.plist
+++ b/ApplepieDemo/ApplepieDemo/Info.plist
@@ -27,6 +27,12 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>App需要您的同意，才能在使用期间访问位置</string>
+	<key>NSCameraUsageDescription</key>
+	<string>App需要您的同意，才能在访问您的相机</string>
+	<key>NSCalendarsUsageDescription</key>
+	<string>App需要您的同意，才能访问您的日历</string>
+	<key>NSFaceIDUsageDescription</key>
+	<string>App需要您的同意，才能访问Face ID</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
