--- a/ApplepieDemo/Podfile
+++ b/ApplepieDemo/Podfile
@@ -1,6 +1,6 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
-platform :ios, '10.0'
+platform :ios, '9.0'
 
 # ignore all warnings from all pods
 inhibit_all_warnings!
@@ -16,10 +16,10 @@ target 'Applepie' do
     pod 'PINCache', '~> 3.0.1-beta.7'
     pod 'Valet', '~> 3.2.2'
     pod 'DeviceKit', '~> 1.10.0'
-    pod 'SwiftyUserDefaults', '4.0.0-alpha.1'
+    pod 'SwiftyUserDefaults', '~> 4.0.0-alpha.1'
+    pod 'WebViewJavascriptBridge', '~> 6.0.0'
     pod 'CocoaLumberjack/Swift', '~> 3.4.2'
     pod 'SwiftLocation', '~> 3.2.3'
-    pod 'SPPermission', '~> 2.4.2'
 end
 
 def pods
