--- a/ApplepieDemo/Podfile
+++ b/ApplepieDemo/Podfile
@@ -21,6 +21,8 @@ target 'Applepie' do
     pod 'CocoaLumberjack/Swift', '~> 3.4.2'
     pod 'SwiftLocation', '~> 3.2.3'
     pod 'MBProgressHUD', '~> 1.1.0'
+    pod 'SnapKit', '~> 4.2.0'
+    pod 'MJRefresh', '~> 3.1.0'
 end
 
 def pods
