--- a/ApplepieDemo/Podfile
+++ b/ApplepieDemo/Podfile
@@ -31,6 +31,16 @@ def pods
     pod 'CocoaLumberjack/Swift', '~> 3.4.2'
     pod 'SwiftLocation', '~> 3.2.3'
     pod 'DoraemonKit/WithLogger','1.1.3', :configurations => ['Debug']
+    pod 'UMCCommon'
+    pod 'UMCSecurityPlugins'
+    pod 'UMCAnalytics'
+    pod 'UMCPush'
+    pod 'UMCErrorCatch'
+    pod 'UMCShare/UI'
+    pod 'UMCShare/Social/ReducedWeChat'
+    pod 'UMCShare/Social/ReducedQQ'
+    pod 'UMCShare/Social/ReducedSina'
+    pod 'UMCCommonLog'
 
 end
 
