--- a/ApplepieDemo/ApplepieDemo/Info.plist
+++ b/ApplepieDemo/ApplepieDemo/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>CFBundleDisplayName</key>
+	<string>Applepie</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
@@ -25,14 +27,14 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>App需要您的同意，才能在使用期间访问位置</string>
-	<key>NSCameraUsageDescription</key>
-	<string>App需要您的同意，才能在访问您的相机</string>
 	<key>NSCalendarsUsageDescription</key>
 	<string>App需要您的同意，才能访问您的日历</string>
+	<key>NSCameraUsageDescription</key>
+	<string>App需要您的同意，才能在访问您的相机</string>
 	<key>NSFaceIDUsageDescription</key>
 	<string>App需要您的同意，才能访问Face ID</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>App需要您的同意，才能在使用期间访问位置</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
