--- a/ApplepieDemo/ApplepieDemo.xcodeproj/xcshareddata/xcschemes/ApplepieDemo.xcscheme
+++ b/ApplepieDemo/ApplepieDemo.xcodeproj/xcshareddata/xcschemes/ApplepieDemo.xcscheme
@@ -93,6 +93,11 @@
          </BuildableReference>
       </BuildableProductRunnable>
       <AdditionalOptions>
+         <AdditionalOption
+            key = "MallocScribble"
+            value = ""
+            isEnabled = "YES">
+         </AdditionalOption>
       </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
