--- a/ApplepieDemo/ApplepieDemo/Info.plist
+++ b/ApplepieDemo/ApplepieDemo/Info.plist
@@ -17,7 +17,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.0.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
@@ -35,6 +35,10 @@
 	<string>App需要您的同意，才能访问Face ID</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>App需要您的同意，才能在使用期间访问位置</string>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
