--- a/ApplepieDemo/Podfile
+++ b/ApplepieDemo/Podfile
@@ -1,36 +1,15 @@
 source 'https://github.com/CocoaPods/Specs.git'
 
-platform :ios, '9.0'
+platform :ios, '13.0'
 
 # ignore all warnings from all pods
 inhibit_all_warnings!
 
 use_frameworks!
 
-target 'Applepie' do
-    pod 'Alamofire', '~> 4.7.3'
-    pod 'ReactiveCocoa', '~> 8.0.2'
-    pod 'CryptoSwift', '~> 0.13.0'
-    pod 'PromiseKit', '~> 6.7.0'
-    pod 'Kingfisher', '~> 4.10.1'
-    pod 'PINCache', '~> 3.0.1-beta.7'
-    pod 'Valet', '~> 3.2.2'
-    pod 'DeviceKit', '~> 1.10.0'
-    pod 'SwiftyUserDefaults', '~> 4.0.0-alpha.1'
-    pod 'WebViewJavascriptBridge', '~> 6.0.0'
-    pod 'CocoaLumberjack/Swift', '~> 3.4.2'
-    pod 'SwiftLocation', '~> 3.2.3'
-    pod 'MBProgressHUD', '~> 1.1.0'
-    pod 'SnapKit', '~> 4.2.0'
-    pod 'MJRefresh', '~> 3.1.0'
-end
-
-def pods
-    pod 'Alamofire', '~> 4.7.3'
-    pod 'ReactiveCocoa', '~> 8.0.2'
-    pod 'CocoaLumberjack/Swift', '~> 3.4.2'
-    pod 'SwiftLocation', '~> 3.2.3'
-    pod 'DoraemonKit/WithLogger','1.1.3', :configurations => ['Debug']
+target 'ApplepieDemo' do
+    pod 'Applepie', :path => '../'
+    pod 'DoraemonKit/WithLogger','3.0.1'
     pod 'UMCCommon'
     pod 'UMCSecurityPlugins'
     pod 'UMCAnalytics'
@@ -42,28 +21,11 @@ def pods
     pod 'UMCShare/Social/ReducedSina'
     pod 'UMCCommonLog'
 
-end
 
-target 'ApplepieDemo' do
-    pods
-end
-
-target 'ApplepieTests' do
-    pods
-end
-
-target 'ApplepieDemoTests' do
-    pods
-end
-
-post_install do |installer|
-  installer.pods_project.targets.each do |target|
-    target.build_configurations.each do |config|
-      if target.name == 'ReactiveCocoa'
-        config.build_settings['SWIFT_VERSION'] = '4'
-        else
-        config.build_settings['SWIFT_VERSION'] = '4.2'
-      end
+    target 'ApplepieTests' do
+      inherit! :search_paths
     end
-  end
+    target 'ApplepieDemoTests' do
+      inherit! :search_paths
+    end
 end
